adjustments and comments

--- a/StoreApp.Web/ClientApp/index.html
+++ b/StoreApp.Web/ClientApp/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>StoreApp</title>
+
+    <!--Comment base ref due an issue when trying to get js and other files, the path couldn't been found-->
     <!--<base href="~/">-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
