--- a/StoreApp.Web/ClientAngularApp/index.html
+++ b/StoreApp.Web/ClientAngularApp/index.html
@@ -9,15 +9,18 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/images/store.ico">
-    <link href="assets/css/bootstrap.3.3.7.min.css" rel="stylesheet" />
 
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
 
     <comp-app></comp-app>
 
-    <script src="assets/js/jquery.2.1.3.min.js"></script>
-    <script src="assets/js/bootstrap.3.3.7.min.js"></script>
+
+    <script src="assets/js/jquery.3.2.1.min.js"></script>
+    <script src="assets/js/propper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 
 </body>
 </html>
