--- a/StoreApp.Web/ClientAngularApp/index.html
+++ b/StoreApp.Web/ClientAngularApp/index.html
@@ -12,6 +12,9 @@
 
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+
+    <link href="assets/css/jquery-ui.1.12.1.min.css" rel="stylesheet" />
+
 </head>
 <body>
 
@@ -19,6 +22,10 @@
 
 
     <script src="assets/js/jquery.3.2.1.min.js"></script>
+
+    <script src="assets/js/jquery.1.12.1.min.js"></script>
+    <script src="assets/js/jquery-ui.1.12.1.min.js"></script>
+
     <script src="assets/js/propper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
 
